# pkg/api/v1/helm/releases/utils.go
@@ -1,9 +1,14 @@
 package releases
 
 import (
+	"fmt"
 	"strconv"
 
+	"github.com/pkg/errors"
+	"helm.sh/helm/v3/pkg/chart"
 	"helm.sh/helm/v3/pkg/release"
+	"helm.sh/helm/v3/pkg/strvals"
+	"sigs.k8s.io/yaml"
 )
 
 func constructReleaseElement(r *release.Release, showStatus bool) ReleaseElement {
@@ -27,4 +32,79 @@ func constructReleaseElement(r *release.Release, showStatus bool) ReleaseElement
 	element.Updated = t
 
 	return element
+}
+
+func mergeValues(options ReleaseOptions) (map[string]interface{}, error) {
+	vals := map[string]interface{}{}
+	err := yaml.Unmarshal([]byte(options.Values), &vals)
+	if err != nil {
+		return vals, fmt.Errorf("failed parsing values")
+	}
+
+	for _, value := range options.SetValues {
+		if err := strvals.ParseInto(value, vals); err != nil {
+			return vals, fmt.Errorf("failed parsing set data")
+		}
+	}
+
+	for _, value := range options.SetStringValues {
+		if err := strvals.ParseIntoString(value, vals); err != nil {
+			return vals, fmt.Errorf("failed parsing set_string data")
+		}
+	}
+
+	return vals, nil
+}
+
+func isChartInstallable(ch *chart.Chart) (bool, error) {
+	switch ch.Metadata.Type {
+	case "", "application":
+		return true, nil
+	}
+
+	return false, errors.Errorf("%s charts are not installable", ch.Metadata.Type)
+}
+
+func getReleaseHistory(rls []*release.Release) (history ReleaseHistory) {
+	for i := len(rls) - 1; i >= 0; i-- {
+		r := rls[i]
+		c := formatChartname(r.Chart)
+		s := r.Info.Status.String()
+		v := r.Version
+		d := r.Info.Description
+		a := formatAppVersion(r.Chart)
+
+		rInfo := ReleaseInfo{
+			Revision:    v,
+			Status:      s,
+			Chart:       c,
+			AppVersion:  a,
+			Description: d,
+		}
+		if !r.Info.LastDeployed.IsZero() {
+			rInfo.Updated = r.Info.LastDeployed
+
+		}
+		history = append(history, rInfo)
+	}
+
+	return history
+}
+
+func formatChartname(c *chart.Chart) string {
+	if c == nil || c.Metadata == nil {
+		// This is an edge case that bas happened in prod, though we don't
+		// know how: https://github.com/helm/helm/issues/1347
+		return "MISSING"
+	}
+	return fmt.Sprintf("%s-%s", c.Name(), c.Metadata.Version)
+}
+
+func formatAppVersion(c *chart.Chart) string {
+	if c == nil || c.Metadata == nil {
+		// This is an edge case that has happened in prod, though we don't
+		// know how: https://github.com/helm/helm/issues/1347
+		return "MISSING"
+	}
+	return c.AppVersion()
 }
